<resources>
    <string name="unitherapy">UniTherapy</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="notifications">Notifications</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat">Chat</string>
    <string name="community">Community</string>
    <string name="therapist">Therapist</string>
    <string name="reset_password_desc">You will receive a mail that will contain a link to reset your password</string>
    <string name="contentDesc">A random Image</string>
    <string name="testBio">I believe everyone should have a safe and healing place to work through lif
        e\'s difficulties. I try to help bring families and couples closer together through therapeutic
        work and help to have fulfilling relationships.</string>
    <string name="user_desc">Hi there! My name is Ezichi Ani and I am a trauma counselor. I am empathetic
        towards anyone who is in a tough situation, I provide a safe space for healing and growing or
        just if you need a listening ear. I am kind, I definitely do not judge, My pronouns are she/her.
        I would like you to know that tough times never last, tough people do.
        It\'s only a cliche cause it\'s true.</string>

    <string name="work_experience">Work Experience</string>
    <string name="hobbies">Hobbies</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="proceed">Proceed</string>
    <string name="log_in">Log In</string>
    <string name="log_in_with_email">Log in with email</string>
    <string name="continue_text">Continue</string>
    <string name="first_time">First time?</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="submit">Submit</string>
</resources>